--- a/services/idp/public/index.html
+++ b/services/idp/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#1b223d">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/static/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="%PUBLIC_URL%/static/favicon.svg" type="image/svg+xml">
     <meta property="csp-nonce" content="__CSP_NONCE__">
     <title>Sign in - OpenCloud</title>
   </head>
